--- a/src/components/Introduction/Header.css
+++ b/src/components/Introduction/Header.css
@@ -5,7 +5,7 @@
   align-items: left;
   height: 100vh;
   max-width: 100vw;
-  background-image: url('src/assets/images/top-view-bowl-with-lentils-variety-condiments.jpg');
+  background-image: url('/src/assets/images/top-view-bowl-with-lentils-variety-condiments.png');
   background-size: cover;
   background-position: center;
   color: gold;
